--- a/task_01_cleaning/task01.ipynb
+++ b/task_01_cleaning/task01.ipynb
@@ -23,6 +23,32 @@
     "df_doc_cam_bien = pd.read_csv(duong_dan_goc + 'sensor_readings.csv')\n",
     "df_bao_tri = pd.read_csv(duong_dan_goc + 'maintenance_log.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d3fa7fd",
+   "metadata": {},
+   "source": [
+    "1.1 - Làm sạch sensor_id, machine_id, sensor_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "47fdcf94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_thong_tin['sensor_id'] = (df_thong_tin['sensor_id'].astype(str).str.strip().str.upper())\n",
+    "\n",
+    "df_thong_tin['machine_id'] = (df_thong_tin['machine_id'].astype(str).str.strip().str.upper())\n",
+    "\n",
+    "stype_raw = df_thong_tin['sensor_type'].astype(str).str.strip()\n",
+    "stype_low = stype_raw.str.lower()\n",
+    "df_thong_tin.loc[stype_low.str.contains('temp'), 'sensor_type'] = 'Temperature'\n",
+    "df_thong_tin.loc[stype_low.str.contains('vib'), 'sensor_type'] = 'Vibration'\n",
+    "df_thong_tin.loc[stype_low.str.contains('curr'), 'sensor_type'] = 'Current'"
+   ]
   }
  ],
  "metadata": {
