[Task01] Chuẩn hóa timestamp cùng múi giờ và định dạng thời gian.

--- a/task_01_cleaning/task01.ipynb
+++ b/task_01_cleaning/task01.ipynb
@@ -181,6 +181,40 @@
    "source": [
     "df_thong_tin.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcc3b864",
+   "metadata": {},
+   "source": [
+    "1.3 - Chuẩn hóa timestamp cùng múi giờ và định dạng thời gian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "eac94708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_str = df_doc_cam_bien['timestamp'].astype(str).str.strip()\n",
+    "\n",
+    "mask_gach = ts_str.str.contains('-')   \n",
+    "mask_slash = ts_str.str.contains('/')  \n",
+    "\n",
+    "df_doc_cam_bien['timestamp'] = pd.NaT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4d3d68fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_doc_cam_bien.loc[mask_gach, 'timestamp'] = pd.to_datetime(ts_str[mask_gach],format='%Y-%m-%d %H:%M')\n",
+    "df_doc_cam_bien.loc[mask_slash, 'timestamp'] = pd.to_datetime(ts_str[mask_slash],format='%d/%m/%Y %H:%M')"
+   ]
   }
  ],
  "metadata": {
