--- a/task_01_cleaning/task01.ipynb
+++ b/task_01_cleaning/task01.ipynb
@@ -508,6 +508,50 @@
    "source": [
     "df_bao_tri.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76214c2b",
+   "metadata": {},
+   "source": [
+    "1.6 - Xuất các file sạch để dùng cho nhiệm vụ sau"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c1808fc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "thu_muc_clean = '../data_clean/'\n",
+    "\n",
+    "if not os.path.exists(thu_muc_clean):\n",
+    "    os.makedirs(thu_muc_clean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f62f5269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Đã lưu toàn bộ file sạch vào thư mục data_clean/\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_thong_tin.to_csv(thu_muc_clean + 'sensor_info_clean.csv', index=False)\n",
+    "df_doc_cam_bien.to_csv(thu_muc_clean + 'sensor_readings_clean.csv', index=False)\n",
+    "df_bao_tri.to_csv(thu_muc_clean + 'maintenance_log_clean.csv', index=False)\n",
+    "\n",
+    "print(\"Đã lưu toàn bộ file sạch vào thư mục data_clean/\")"
+   ]
   }
  ],
  "metadata": {
