[Task02] Thống kê số lượng cảm biến theo loại (sensor_type)

--- a/task02_query/task02.ipynb
+++ b/task02_query/task02.ipynb
@@ -105,6 +105,40 @@
     "\n",
     "df_thong_tin.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db2c8633",
+   "metadata": {},
+   "source": [
+    "2.1 - Thống kê số lượng cảm biến theo từng loại (sensor_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "faf21a45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sensor_type\n",
+       "Vibration      7\n",
+       "Temperature    2\n",
+       "Current        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "so_luong_theo_loai = df_thong_tin['sensor_type'].value_counts()\n",
+    "so_luong_theo_loai"
+   ]
   }
  ],
  "metadata": {
