--- a/task02_query/task02.ipynb
+++ b/task02_query/task02.ipynb
@@ -262,6 +262,47 @@
     "so_lan_bao_tri = df_bao_tri['machine_id'].value_counts()\n",
     "so_lan_bao_tri"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58a6a3a9",
+   "metadata": {},
+   "source": [
+    "2.4 - Tính giá trị đo trung bình theo từng cảm biến"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "28b94bb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sensor_id\n",
+       " SEN09    35.146667\n",
+       " SEN10    41.582353\n",
+       "SEN01     38.571429\n",
+       "SEN02     28.511111\n",
+       "SEN04     29.300000\n",
+       "SEN05     36.460000\n",
+       "SEN06     26.109091\n",
+       "SEN07     32.606250\n",
+       "SEN08     41.245455\n",
+       "sen03     44.566667\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trung_binh_cam_bien = df_doc_cam_bien.groupby('sensor_id')['value'].mean()\n",
+    "trung_binh_cam_bien"
+   ]
   }
  ],
  "metadata": {
