[Task02] Tìm các máy có nhiều sự cố nhất.

--- a/task02_query/task02.ipynb
+++ b/task02_query/task02.ipynb
@@ -303,6 +303,42 @@
     "trung_binh_cam_bien = df_doc_cam_bien.groupby('sensor_id')['value'].mean()\n",
     "trung_binh_cam_bien"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb6b6b00",
+   "metadata": {},
+   "source": [
+    "2.5 - Tìm các máy có nhiều sự cố nhất"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e5e5d53b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "machine_id\n",
+       "MC01    17\n",
+       "MC05    12\n",
+       "MC02    11\n",
+       "MC03    10\n",
+       "MC04    10\n",
+       "Name: issue_type, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "so_su_co = df_bao_tri.groupby('machine_id')['issue_type'].count()\n",
+    "so_su_co.sort_values(ascending=False)"
+   ]
   }
  ],
  "metadata": {
