[Task03] Tính giá trị đo trung bình theo machine_id × sensor_type.

--- a/task03_groupby/task3.ipynb
+++ b/task03_groupby/task3.ipynb
@@ -125,6 +125,38 @@
     "\n",
     "df_ket_hop.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f7e6d71",
+   "metadata": {},
+   "source": [
+    "***3.1 - Tính giá trị đo trung bình theo machine_id × sensor_type***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1eabcb7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "machine_id  sensor_type\n",
+       "MC01        Current        38.571429\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trung_binh_theo_may_loai = (df_ket_hop.groupby(['machine_id', 'sensor_type'])['value'].mean())\n",
+    "trung_binh_theo_may_loai"
+   ]
   }
  ],
  "metadata": {
