--- a/task03_groupby/task3.ipynb
+++ b/task03_groupby/task3.ipynb
@@ -157,6 +157,139 @@
     "trung_binh_theo_may_loai = (df_ket_hop.groupby(['machine_id', 'sensor_type'])['value'].mean())\n",
     "trung_binh_theo_may_loai"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f3d3e54",
+   "metadata": {},
+   "source": [
+    "***3.2 - Tổng số giờ downtime theo machine_id***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dc41d658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "machine_id\n",
+       "MC01    26.0\n",
+       "MC02    22.0\n",
+       "MC03    30.0\n",
+       "MC04    24.5\n",
+       "MC05    21.5\n",
+       "Name: downtime_hours, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tong_downtime = df_bao_tri.groupby('machine_id')['downtime_hours'].sum()\n",
+    "tong_downtime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffcd6340",
+   "metadata": {},
+   "source": [
+    "***3.3 - Xác định nhóm máy/cảm biến có nguy cơ sự cố cao***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b2f5726f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>so_su_co</th>\n",
+       "      <th>tong_downtime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>machine_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MC01</th>\n",
+       "      <td>17</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC05</th>\n",
+       "      <td>12</td>\n",
+       "      <td>21.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC02</th>\n",
+       "      <td>11</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC03</th>\n",
+       "      <td>10</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC04</th>\n",
+       "      <td>10</td>\n",
+       "      <td>24.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            so_su_co  tong_downtime\n",
+       "machine_id                         \n",
+       "MC01              17           26.0\n",
+       "MC05              12           21.5\n",
+       "MC02              11           22.0\n",
+       "MC03              10           30.0\n",
+       "MC04              10           24.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "so_su_co = df_bao_tri.groupby('machine_id')['issue_type'].count()\n",
+    "tong_downtime = df_bao_tri.groupby('machine_id')['downtime_hours'].sum()\n",
+    "\n",
+    "nguy_co = pd.DataFrame({'so_su_co': so_su_co,'tong_downtime': tong_downtime}).sort_values(['so_su_co', 'tong_downtime'], ascending=False)\n",
+    "nguy_co"
+   ]
   }
  ],
  "metadata": {
