[Task03] Xác định nhóm máy/cảm biến có nguy cơ sự cố cao.

--- a/task03_groupby/task3.ipynb
+++ b/task03_groupby/task3.ipynb
@@ -290,6 +290,105 @@
     "nguy_co = pd.DataFrame({'so_su_co': so_su_co,'tong_downtime': tong_downtime}).sort_values(['so_su_co', 'tong_downtime'], ascending=False)\n",
     "nguy_co"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1861a42",
+   "metadata": {},
+   "source": [
+    "***3.4 - Phân tích mối liên hệ giữa giá trị đo bất thường và downtime.***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7bcdcb8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>so_reading_bat_thuong</th>\n",
+       "      <th>tong_downtime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>machine_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MC01</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC02</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC03</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC04</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC05</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            so_reading_bat_thuong  tong_downtime\n",
+       "machine_id                                      \n",
+       "MC01                          1.0           26.0\n",
+       "MC02                          NaN           22.0\n",
+       "MC03                          NaN           30.0\n",
+       "MC04                          NaN           24.5\n",
+       "MC05                          NaN           21.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ket_hop['bat_thuong'] = df_ket_hop['value'].isna().astype(int)\n",
+    "\n",
+    "so_bat_thuong = df_ket_hop.groupby('machine_id')['bat_thuong'].sum()\n",
+    "tong_downtime = df_bao_tri.groupby('machine_id')['downtime_hours'].sum()\n",
+    "\n",
+    "lien_he = pd.DataFrame({'so_reading_bat_thuong': so_bat_thuong,'tong_downtime': tong_downtime})\n",
+    "lien_he"
+   ]
   }
  ],
  "metadata": {
