[Task03] Tạo các nhóm thời gian (theo ngày/ca) để tổng hợp readings.

--- a/task03_groupby/task3.ipynb
+++ b/task03_groupby/task3.ipynb
@@ -389,6 +389,138 @@
     "lien_he = pd.DataFrame({'so_reading_bat_thuong': so_bat_thuong,'tong_downtime': tong_downtime})\n",
     "lien_he"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dbf2333",
+   "metadata": {},
+   "source": [
+    "***3.5 - Tạo các nhóm thời gian (theo ngày/ca) để thống kê readings***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "17ad1bac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thống kê readings theo Ngày:\n",
+      "            count       mean   max\n",
+      "date                              \n",
+      "2024-01-01     22  34.027273  80.0\n",
+      "2024-01-02     19  25.678947  80.0\n",
+      "2024-01-03     12  37.183333  80.0\n",
+      "2024-01-04     16  42.868750  80.0\n",
+      "2024-01-05      9  27.988889  45.0\n",
+      "Thống kê readings theo Ngày và Ca:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th>shift</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">2024-01-01</th>\n",
+       "      <th>Shift 1 (06:00-14:00)</th>\n",
+       "      <td>8</td>\n",
+       "      <td>33.1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shift 2 (14:00-22:00)</th>\n",
+       "      <td>8</td>\n",
+       "      <td>33.9875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shift 3 (22:00-06:00)</th>\n",
+       "      <td>6</td>\n",
+       "      <td>35.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2024-01-02</th>\n",
+       "      <th>Shift 1 (06:00-14:00)</th>\n",
+       "      <td>8</td>\n",
+       "      <td>30.7375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shift 2 (14:00-22:00)</th>\n",
+       "      <td>4</td>\n",
+       "      <td>26.6250</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  count     mean\n",
+       "date       shift                                \n",
+       "2024-01-01 Shift 1 (06:00-14:00)      8  33.1500\n",
+       "           Shift 2 (14:00-22:00)      8  33.9875\n",
+       "           Shift 3 (22:00-06:00)      6  35.2500\n",
+       "2024-01-02 Shift 1 (06:00-14:00)      8  30.7375\n",
+       "           Shift 2 (14:00-22:00)      4  26.6250"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_doc_cam_bien['timestamp'] = pd.to_datetime(df_doc_cam_bien['timestamp'])\n",
+    "\n",
+    "df_doc_cam_bien['date'] = df_doc_cam_bien['timestamp'].dt.date\n",
+    "readings_theo_ngay = df_doc_cam_bien.groupby('date')['value'].agg(['count', 'mean', 'max'])\n",
+    "print(\"Thống kê readings theo Ngày:\")\n",
+    "print(readings_theo_ngay.head())\n",
+    "\n",
+    "def map_shift(hour):\n",
+    "    if 6 <= hour < 14:\n",
+    "        return 'Shift 1 (06:00-14:00)'\n",
+    "    elif 14 <= hour < 22:\n",
+    "        return 'Shift 2 (14:00-22:00)'\n",
+    "    else:\n",
+    "        return 'Shift 3 (22:00-06:00)'\n",
+    "\n",
+    "df_doc_cam_bien['shift'] = df_doc_cam_bien['timestamp'].dt.hour.apply(map_shift)\n",
+    "\n",
+    "readings_theo_ca = (df_doc_cam_bien.groupby(['date', 'shift'])['value'].agg(['count', 'mean']))\n",
+    "\n",
+    "print(\"Thống kê readings theo Ngày và Ca:\")\n",
+    "readings_theo_ca.head()"
+   ]
   }
  ],
  "metadata": {
