--- a/task04_merge/task04.ipynb
+++ b/task04_merge/task04.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7869f953",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab9e2103",
+   "id": "3b25ae5a",
    "metadata": {},
    "source": [
     "4.1 - Merge sensor_info với sensor_readings theo sensor_id"
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9cf7bc2f",
+   "execution_count": 3,
+   "id": "93027f54",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4     SEN09  2024-01-09 12:37:00   25.5     A        NaN      NaN         NaN"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba407b2",
+   "id": "19eb371b",
    "metadata": {},
    "source": [
     "4.2 - Merge thêm maintenance_log theo machine_id"
@@ -151,10 +151,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "007ea358",
+   "execution_count": 4,
+   "id": "35310ddd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sensor_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>machine_id</th>\n",
+       "      <th>location</th>\n",
+       "      <th>sensor_type</th>\n",
+       "      <th>maintenance_date</th>\n",
+       "      <th>issue_type</th>\n",
+       "      <th>downtime_hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SEN08</td>\n",
+       "      <td>2024-01-08 12:23:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>°C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sen03</td>\n",
+       "      <td>2024-01-08 18:46:00</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SEN09</td>\n",
+       "      <td>2024-01-01 20:33:00</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>mm/s</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SEN08</td>\n",
+       "      <td>2024-01-07 17:47:00</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>°C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SEN09</td>\n",
+       "      <td>2024-01-09 12:37:00</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sensor_id            timestamp  value  unit machine_id location sensor_type  \\\n",
+       "0    SEN08   2024-01-08 12:23:00    NaN    °C        NaN      NaN         NaN   \n",
+       "1     sen03  2024-01-08 18:46:00   80.0     A        NaN      NaN         NaN   \n",
+       "2     SEN09  2024-01-01 20:33:00   25.5  mm/s        NaN      NaN         NaN   \n",
+       "3    SEN08   2024-01-07 17:47:00   45.0    °C        NaN      NaN         NaN   \n",
+       "4     SEN09  2024-01-09 12:37:00   25.5     A        NaN      NaN         NaN   \n",
+       "\n",
+       "  maintenance_date issue_type  downtime_hours  \n",
+       "0              NaN        NaN             NaN  \n",
+       "1              NaN        NaN             NaN  \n",
+       "2              NaN        NaN             NaN  \n",
+       "3              NaN        NaN             NaN  \n",
+       "4              NaN        NaN             NaN  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_day_du = df_sr_info.merge(df_bao_tri,on='machine_id',how='left')\n",
     "df_day_du.head()"
