--- a/task04_merge/task04.ipynb
+++ b/task04_merge/task04.ipynb
@@ -426,6 +426,149 @@
     "readings_khong_khop_bao_tri = df_day_du[df_day_du['maintenance_date'].isna()]\n",
     "readings_khong_khop_bao_tri.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cce3f84b",
+   "metadata": {},
+   "source": [
+    "4.4 - Xuất file dữ liệu hoàn chỉnh phục vụ pivot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "36554360",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sensor_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>machine_id</th>\n",
+       "      <th>location</th>\n",
+       "      <th>sensor_type</th>\n",
+       "      <th>maintenance_date</th>\n",
+       "      <th>issue_type</th>\n",
+       "      <th>downtime_hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SEN08</td>\n",
+       "      <td>2024-01-08 12:23:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>°C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sen03</td>\n",
+       "      <td>2024-01-08 18:46:00</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SEN09</td>\n",
+       "      <td>2024-01-01 20:33:00</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>mm/s</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SEN08</td>\n",
+       "      <td>2024-01-07 17:47:00</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>°C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SEN09</td>\n",
+       "      <td>2024-01-09 12:37:00</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sensor_id            timestamp  value  unit machine_id location sensor_type  \\\n",
+       "0    SEN08   2024-01-08 12:23:00    NaN    °C        NaN      NaN         NaN   \n",
+       "1     sen03  2024-01-08 18:46:00   80.0     A        NaN      NaN         NaN   \n",
+       "2     SEN09  2024-01-01 20:33:00   25.5  mm/s        NaN      NaN         NaN   \n",
+       "3    SEN08   2024-01-07 17:47:00   45.0    °C        NaN      NaN         NaN   \n",
+       "4     SEN09  2024-01-09 12:37:00   25.5     A        NaN      NaN         NaN   \n",
+       "\n",
+       "  maintenance_date issue_type  downtime_hours  \n",
+       "0              NaN        NaN             NaN  \n",
+       "1              NaN        NaN             NaN  \n",
+       "2              NaN        NaN             NaN  \n",
+       "3              NaN        NaN             NaN  \n",
+       "4              NaN        NaN             NaN  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_day_du.to_csv('../data_clean/full_merged_data.csv', index=False)\n",
+    "df_day_du.head()"
+   ]
   }
  ],
  "metadata": {
