[Task05] Pivot giá trị đo trung bình theo sensor_type × location.

--- a/task05_pivot/task5.ipynb
+++ b/task05_pivot/task5.ipynb
@@ -20,6 +20,73 @@
     "df_thong_tin = pd.read_csv('../data_clean/sensor_info_clean.csv')\n",
     "df_bao_tri = pd.read_csv('../data_clean/maintenance_log_clean.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8da077",
+   "metadata": {},
+   "source": [
+    "5.1 - Pivot giá trị đo trung bình theo sensor_type × location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "294492c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>location</th>\n",
+       "      <th>Line1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sensor_type</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Current</th>\n",
+       "      <td>38.571429</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "location         Line1\n",
+       "sensor_type           \n",
+       "Current      38.571429"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot_gia_tri = df_full.pivot_table(values='value', index='sensor_type', columns='location', aggfunc='mean')\n",
+    "pivot_gia_tri"
+   ]
   }
  ],
  "metadata": {
