[Task05] Pivot tổng downtime_hours theo machine_id × issue_type

--- a/task05_pivot/task5.ipynb
+++ b/task05_pivot/task5.ipynb
@@ -87,6 +87,79 @@
     "pivot_gia_tri = df_full.pivot_table(values='value', index='sensor_type', columns='location', aggfunc='mean')\n",
     "pivot_gia_tri"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34b9341f",
+   "metadata": {},
+   "source": [
+    "5.2 - Pivot tổng downtime_hours theo machine_id × issue_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3eb46231",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>issue_type</th>\n",
+       "      <th>Electrical</th>\n",
+       "      <th>Overheat</th>\n",
+       "      <th>Vibration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>machine_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MC01</th>\n",
+       "      <td>80.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "issue_type  Electrical  Overheat  Vibration\n",
+       "machine_id                                 \n",
+       "MC01              80.0      48.0       80.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot_downtime = df_full.pivot_table(values='downtime_hours', index='machine_id', columns='issue_type', aggfunc='sum')\n",
+    "pivot_downtime"
+   ]
   }
  ],
  "metadata": {
