[Task05] Thực hiện stack/unstack trên bảng pivot để luyện MultiIndex.

--- a/task05_pivot/task5.ipynb
+++ b/task05_pivot/task5.ipynb
@@ -160,6 +160,44 @@
     "pivot_downtime = df_full.pivot_table(values='downtime_hours', index='machine_id', columns='issue_type', aggfunc='sum')\n",
     "pivot_downtime"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d133229e",
+   "metadata": {},
+   "source": [
+    "5.3 - Thực hiện stack/unstack trên bảng pivot để luyện Multindex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a197fe48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(machine_id  issue_type\n",
+       " MC01        Electrical    80.0\n",
+       "             Overheat      48.0\n",
+       "             Vibration     80.0\n",
+       " dtype: float64,\n",
+       " issue_type  Electrical  Overheat  Vibration\n",
+       " machine_id                                 \n",
+       " MC01              80.0      48.0       80.0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stacked = pivot_downtime.stack()\n",
+    "unstacked = stacked.unstack()\n",
+    "stacked, unstacked"
+   ]
   }
  ],
  "metadata": {
