--- a/task05_pivot/task5.ipynb
+++ b/task05_pivot/task5.ipynb
@@ -198,6 +198,160 @@
     "unstacked = stacked.unstack()\n",
     "stacked, unstacked"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e821d63",
+   "metadata": {},
+   "source": [
+    "5.4 - Xác định máy/vị trí có rủi ro cao nhất"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "50d0c133",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "so_su_co = df_bao_tri.groupby('machine_id')['issue_type'].count()\n",
+    "tong_downtime = df_bao_tri.groupby('machine_id')['downtime_hours'].sum()\n",
+    "nguy_co = pd.DataFrame({'so_su_co': so_su_co, 'tong_downtime': tong_downtime}).fillna(0) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e5b4f135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Các máy và vị trí có rủi ro sự cố cao nhất (theo số sự cố và downtime):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>so_su_co</th>\n",
+       "      <th>tong_downtime</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>machine_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MC01</th>\n",
+       "      <td>17</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Line1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC01</th>\n",
+       "      <td>17</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Line 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC05</th>\n",
+       "      <td>12</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>Line1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC05</th>\n",
+       "      <td>12</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>Khu A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC05</th>\n",
+       "      <td>12</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>Line 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC02</th>\n",
+       "      <td>11</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Khu  A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC03</th>\n",
+       "      <td>10</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Line1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC04</th>\n",
+       "      <td>10</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>Line1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MC04</th>\n",
+       "      <td>10</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>Khu A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            so_su_co  tong_downtime location\n",
+       "machine_id                                  \n",
+       "MC01              17           26.0    Line1\n",
+       "MC01              17           26.0   Line 1\n",
+       "MC05              12           21.5    Line1\n",
+       "MC05              12           21.5    Khu A\n",
+       "MC05              12           21.5   Line 1\n",
+       "MC02              11           22.0   Khu  A\n",
+       "MC03              10           30.0    Line1\n",
+       "MC04              10           24.5    Line1\n",
+       "MC04              10           24.5    Khu A"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "machine_location = df_thong_tin[['machine_id', 'location']].drop_duplicates().set_index('machine_id')\n",
+    "\n",
+    "nguy_co = nguy_co.merge(machine_location, left_index=True, right_index=True, how='left')\n",
+    "\n",
+    "may_rui_ro_cao = nguy_co.sort_values(['so_su_co', 'tong_downtime'], ascending=False)\n",
+    "\n",
+    "print(\"Các máy và vị trí có rủi ro sự cố cao nhất (theo số sự cố và downtime):\")\n",
+    "may_rui_ro_cao"
+   ]
   }
  ],
  "metadata": {
